--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -2,6 +2,7 @@
   --color-primary: #eb2f64;
   --color-primary-light: #ff3366;
   --color-primary-dark: #ba265d;
+  --color-white: #fff;
   --color-grey-light-1: #faf9f9;
   --color-grey-light-2: #f4f2f2;
   --color-grey-light-3: #f0eeee;
@@ -9,6 +10,7 @@
   --color-grey-dark-1: #333;
   --color-grey-dark-2: #777;
   --color-grey-dark-3: #999;
+  --shadow-dark: 0 20px 60px rgba(0 0 0 ./4);
 }
 
 * {
@@ -37,4 +39,10 @@ body {
     var(--color-primary-dark)
   );
   min-height: 100vh;
+}
+
+@media only screen and (min-width: 801px) and(max-width:960px) {
+}
+
+@media only screen and (min-width: 600px) and(max-width:800px) {
 }
